--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.2",
+    "logkitty": "^0.7.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-web": "~0.11.7",
-    "react-router-native": "^5.2.0"
+    "react-router-native": "^5.2.0",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
