--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.2.0",
     "url-parse": "^1.4.7",
-    "@react-native-community/datetimepicker": "2.4.0"
+    "@react-native-community/datetimepicker": "2.4.0",
+    "react-native-maps": "0.27.1",
+    "expo-location": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
