--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.0",
+    "@mapbox/polyline": "^1.1.1",
+    "@react-native-community/datetimepicker": "2.4.0",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "formik": "^2.1.5",
     "logkitty": "^0.7.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react-native-maps": "0.27.1",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.2.0",
     "url-parse": "^1.4.7",
-    "@react-native-community/datetimepicker": "2.4.0",
-    "react-native-maps": "0.27.1",
-    "expo-location": "~8.2.1"
+    "yup": "^0.29.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
