--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.2.0",
     "url-parse": "^1.4.7",
