added instagroom icon to assets, and to app.json for icon and splash. I also adjusted the stylesheet widths for dropdown listItem. Also changed teh default client location to lat:0 lng:0. Finally changed the conditional render for map marker on Route page.

--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "instagroom-client",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/gm_app_icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/gm_app_icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
